--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,19 @@
 __pycache__/
-cae_model/
-bc_model/
 logs/
+weights/*/
+tests/
+
 datasets/*/*.tif
+datasets/*/*/*.tif
 datasets/*/*.txt
+datasets/*/*/*.txt
+datasets/*/*.csv
+datasets/*/*/*.csv
+
+bc_model/
+cae_model/
+cae_model_dipole2/
+cae_model_old/
+
+*.TIF
+*.png
